<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/violin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/violinA_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/violinA_button"
            android:typeface="sans"
            android:textSize="25sp" />

        <Button
            android:id="@+id/violinB_button"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/violinB_button"
            android:textSize="25sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/violinC_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/violinC_button"
            android:typeface="sans"
            android:textSize="25sp" />

        <Button
            android:id="@+id/violinD_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/violinD_button"
            android:typeface="sans"
            android:textSize="25sp" />

        <Button
            android:id="@+id/violinE_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/violinE_button"
            android:typeface="sans"
            android:textSize="25sp" />

        <Button
            android:id="@+id/violinF_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/violinF_button"
            android:typeface="sans"
            android:textSize="25sp" />

        <Button
            android:id="@+id/violinG_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/violinG_button"
            android:typeface="sans"
            android:textSize="25sp" />
    </LinearLayout>


</FrameLayout>